snaketray (1.4) unstable; 
  * Removed cancel button in settings
  * Install in kde's main menu
  * Avoid login loop when wallet data is stored
  * Upon login error the user can chose to delete wallet info
  * Reordered menu entries
  * Added files for making it easier to create a debian package
  * Things required for a proper debian package (man page, copyright, changelog)
 -- Daniel Bengtsson <daniel@bengtssons.info>  Sun, 28 Oct 2007 02:20:33 +0200

snaketray (1.3) unstable;
  * Fixed bug during manually initiated resync from disabled state.
  * Better looking disable menu entry
  * Menu entry for starting the stream
  * Checkbox for disabling new version check
 -- Daniel Bengtsson <daniel@bengtssons.info>  Sun, 06 May 2007 00:00:00 +0200

snaketray (1.2) unstable;
  * Auto-check for new version
  * Setting to avoid display of seconds 
  * About dialog to display version number
  * Possibility to disable the application
  * Save password and username between sessions in KWallet
  * Avoid using 0 minutes intervals (which made SnakeTray go nuts)
 -- Daniel Bengtsson <daniel@bengtssons.info>  Sat, 24 Feb 2007 00:00:00 +0100

snaketray (1.1) unstable;
  * settings (resynctimer and debug)
  * do not resync when screensaver is on
  * better error handling
  * animated resync icon
  * better font size handler
 -- Daniel Bengtsson <daniel@bengtssons.info>  Tue, 23 Jan 2007 00:00:00 +0100